deploy/k8s/platform/gateway/resources/routes.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: api-route
  namespace: rag-api
spec:
  parentRefs:
    - name: cilium-gateway
      namespace: rag-platform
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: api
          port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana-route
  namespace: monitoring
spec:
  parentRefs:
    - name: cilium-gateway
      namespace: rag-platform
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /monitor
      backendRefs:
        - name: prometheus-grafana
          port: 80
